# noalloc-research

./: .gitignore  CMakeLists.txt
examples/: ex_capability.cpp  ex_runtime_guard.cpp
include/noalloc/: noalloc_guard.h
src/: noalloc_guard.cpp
